# plex-history-report

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .pymarkdown.yaml  README.md  codecov.yml  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml  renovate.json  renovate.yaml
.github/workflows/: ci.yml  run-black.yml  run-coverage.yml  run-editorconfig-lint.yml  run-lint.yml  run-markdown-lint.yml  run-prettier.yml  run-ruff-fix.yml  run-shellcheck.yml  run-tests.yml  run-xenon-check.yml
plex_history_report/: __init__.py  __main__.py  cli.py  config.py  formatters.py  plex_client.py  recorders.py  utils.py
plex_history_report/formatters/: __init__.py  base.py  compact_formatter.py  csv_formatter.py  factory.py  json_formatter.py  markdown_formatter.py  rich.py  rich_formatter.py  yaml_formatter.py
plex_stats/: __init__.py  cli.py  config.py  formatters.py  plex_client.py
scripts/: check-gh-actions  run-all-checks  run-black  run-complexity-check  run-coverage  run-editorconfig-lint  run-lint  run-markdown-lint  run-prettier  run-ruff-fix  run-shell-checks  run-shellcheck  run-shfmt  run-tests  run-xenon-check  test-output.sh
tests/: __init__.py  fixtures.py  test_cli.py  test_cli_integration.py  test_compact_formatter.py  test_config.py  test_csv_formatter.py  test_fix_whitespace.py  test_formatters.py  test_plex_client.py  test_recorders.py  test_rich_formatter.py  test_utils.py
tests/fixtures/: plex_test_movie_data.json  plex_test_tv_data.json
